--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -13,8 +13,9 @@
       <ul class="list-group mb-4">
         <!-- List the todo items here -->
         {% for todo_item in todo_items %}
-        <li>{{todo_item.title}}: {todo_item.status}}:</li>
-        <form action="http://localhost:5000/complete/{{todo_item.title}}" method="post" class="form-complete">
+        <li>{{todo_item.name}}: {{todo_item.status}}</li>
+        <!-- TODO: Improve button layout -->
+        <form action="http://localhost:5000/complete/{{todo_item.name}}" method="post" class="form-complete">
           <div class="form-complete">
             <input type="submit" value="Complete">
           </div>
