--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -15,7 +15,7 @@
         {% for todo_item in todo_items %}
         <li>{{todo_item.name}}: {{todo_item.status}}</li>
         <!-- TODO: Improve button layout -->
-        <form action="http://localhost:5000/complete/{{todo_item.name}}" method="post" class="form-complete">
+        <form action="/complete/{{todo_item.name}}" method="post" class="form-complete">
           <div class="form-complete">
             <input type="submit" value="Complete">
           </div>
