[Exercise 3] Use ViewModel to render template

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,10 +12,10 @@
       <h2>Items</h2>
       <ul class="list-group mb-4">
         <!-- List the todo items here -->
-        {% for todo_item in todo_items %}
-        <li>{{todo_item.name}}: {{todo_item.status}}</li>
+        {% for item in view_model.items %}
+        <li>{{item.name}}: {{item.status}}</li>
         <!-- TODO: Improve button layout -->
-        <form action="/complete/{{todo_item.name}}" method="post" class="form-complete">
+        <form action="/complete/{{item.name}}" method="post" class="form-complete">
           <div class="form-complete">
             <input type="submit" value="Complete">
           </div>
@@ -27,8 +27,8 @@
   
   <form action="http://localhost:5000/add" method="post" class="form-todo">
     <div class="form-todo">
-      <label for="todo_item">Enter your task: </label>
-      <input type="text" name="todo_item" id="todo_item" required>
+      <label for="view_model.items">Enter your task: </label>
+      <input type="text" name="view_model.items" id="view_model.items" required>
     </div>
     <div class="form-todo">
       <input type="submit" value="Submit">
